--- a/UT3/Practica2UT3/src/practica2ut3/PantallaPrincipal.form
+++ b/UT3/Practica2UT3/src/practica2ut3/PantallaPrincipal.form
@@ -49,6 +49,9 @@
       </Constraints>
     </Component>
     <Component class="org.netbeans.validation.api.ui.swing.ValidationPanel" name="validationPanel">
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="validationPanelStateChanged"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="-2" y="11" width="410" height="62"/>
